--- a/package.json
+++ b/package.json
@@ -13,30 +13,35 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/check": "^0.9.3",
-        "@astrojs/rss": "^4.0.7",
-        "@astrojs/sitemap": "^3.1.6",
-        "@astrojs/tailwind": "^5.1.0",
-        "astro": "^4.14.5",
+        "@astrojs/check": "^0.9.4",
+        "@astrojs/react": "^3.6.2",
+        "@astrojs/rss": "^4.0.9",
+        "@astrojs/sitemap": "^3.2.1",
+        "@astrojs/tailwind": "^5.1.2",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "astro": "^4.16.11",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "prettier-plugin-tailwindcss": "^0.6.6",
-        "sass": "^1.77.8",
+        "prettier-plugin-tailwindcss": "^0.6.8",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "sass": "^1.80.7",
         "sharp": "^0.33.5",
-        "tailwind-merge": "^2.5.2",
-        "tailwindcss": "^3.4.10",
+        "tailwind-merge": "^2.5.4",
+        "tailwindcss": "^3.4.14",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.5.4"
+        "typescript": "^5.6.3"
     },
     "devDependencies": {
-        "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.14",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+        "@tailwindcss/forms": "^0.5.9",
+        "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
-        "cssnano": "^7.0.5",
+        "cssnano": "^7.0.6",
         "postcss-import": "^16.1.0",
         "prettier": "^3.3.3",
         "prettier-plugin-astro": "^0.14.1",
-        "typescript": "^5.5.4"
+        "typescript": "^5.6.3"
     }
 }
