--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "jsxImportSource": "react"
   },
   "include": [
     "**/*.ts",
