--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "detikcom-project",
+    "name": "starter-project",
     "type": "module",
     "version": "1.0.0",
     "trustedDependencies": [
@@ -13,25 +13,31 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.14.8",
+        "@alpinejs/intersect": "^3.14.8",
+        "@astrojs/alpinejs": "^0.4.1",
         "@astrojs/check": "^0.9.4",
-        "@astrojs/react": "^3.6.2",
-        "@astrojs/rss": "^4.0.9",
+        "@astrojs/react": "^4.1.2",
+        "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.2.1",
-        "@astrojs/tailwind": "^5.1.2",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "astro": "^4.16.11",
-        "class-variance-authority": "^0.7.0",
+        "@astrojs/tailwind": "^5.1.4",
+        "@types/alpinejs": "^3.13.11",
+        "@types/react": "^19.0.2",
+        "@types/react-dom": "^19.0.2",
+        "alpinejs": "^3.14.8",
+        "astro": "^5.1.2",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "prettier-plugin-tailwindcss": "^0.6.8",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "sass": "^1.80.7",
+        "lucide-react": "^0.469.0",
+        "prettier-plugin-tailwindcss": "^0.6.9",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "sass": "^1.83.1",
         "sharp": "^0.33.5",
-        "tailwind-merge": "^2.5.4",
-        "tailwindcss": "^3.4.14",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.6.3"
+        "typescript": "^5.7.2"
     },
     "devDependencies": {
         "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
@@ -40,8 +46,8 @@
         "autoprefixer": "^10.4.20",
         "cssnano": "^7.0.6",
         "postcss-import": "^16.1.0",
-        "prettier": "^3.3.3",
+        "prettier": "^3.4.2",
         "prettier-plugin-astro": "^0.14.1",
-        "typescript": "^5.6.3"
+        "typescript": "^5.7.2"
     }
 }
