--- a/package.json
+++ b/package.json
@@ -15,39 +15,39 @@
     "dependencies": {
         "@alpinejs/collapse": "^3.14.8",
         "@alpinejs/intersect": "^3.14.8",
-        "@astrojs/alpinejs": "^0.4.1",
+        "@astrojs/alpinejs": "^0.4.3",
         "@astrojs/check": "^0.9.4",
-        "@astrojs/react": "^4.1.2",
+        "@astrojs/react": "^4.1.6",
         "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.2.1",
-        "@astrojs/tailwind": "^5.1.4",
+        "@astrojs/tailwind": "^5.1.5",
+        "@tailwindcss/vite": "^4.0.0",
         "@types/alpinejs": "^3.13.11",
-        "@types/react": "^19.0.2",
-        "@types/react-dom": "^19.0.2",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
         "alpinejs": "^3.14.8",
-        "astro": "^5.1.2",
+        "astro": "^5.1.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.469.0",
-        "prettier-plugin-tailwindcss": "^0.6.9",
+        "lucide-react": "^0.474.0",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "sass": "^1.83.1",
+        "sass": "^1.83.4",
         "sharp": "^0.33.5",
         "tailwind-merge": "^2.6.0",
-        "tailwindcss": "^3.4.17",
-        "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.2"
+        "tailwindcss": "^4.0.0",
+        "typescript": "^5.7.3"
     },
     "devDependencies": {
-        "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-        "@tailwindcss/forms": "^0.5.9",
-        "@tailwindcss/typography": "^0.5.15",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.20",
         "cssnano": "^7.0.6",
         "postcss-import": "^16.1.0",
         "prettier": "^3.4.2",
         "prettier-plugin-astro": "^0.14.1",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.3"
     }
 }
