--- a/package.json
+++ b/package.json
@@ -16,27 +16,28 @@
         "@alpinejs/collapse": "^3.14.9",
         "@alpinejs/focus": "^3.14.9",
         "@alpinejs/intersect": "^3.14.9",
-        "@astrojs/alpinejs": "^0.4.3",
+        "@astrojs/alpinejs": "^0.4.5",
         "@astrojs/check": "^0.9.4",
-        "@astrojs/react": "^4.2.1",
+        "@astrojs/react": "^4.2.3",
         "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.3.0",
-        "@tailwindcss/vite": "^4.0.14",
+        "@tailwindcss/vite": "^4.1.2",
         "@types/alpinejs": "^3.13.11",
-        "@types/react": "^19.0.12",
-        "@types/react-dom": "^19.0.4",
+        "@types/react": "^19.1.0",
+        "@types/react-dom": "^19.1.1",
         "alpinejs": "^3.14.9",
-        "astro": "^5.5.3",
+        "astro": "^5.6.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.483.0",
+        "lucide-react": "^0.487.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "sass": "^1.86.0",
-        "sharp": "^0.33.5",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.14",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "sass": "^1.86.3",
+        "sharp": "^0.34.0",
+        "tailwind-merge": "^3.1.0",
+        "tailwind-variants": "^1.0.0",
+        "tailwindcss": "^4.1.2",
         "typescript": "^5.8.2"
     },
     "devDependencies": {
