--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@astrojs/react": "^4.2.3",
         "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.3.0",
-        "@tailwindcss/vite": "^4.1.2",
+        "@tailwindcss/vite": "^4.1.3",
         "@types/alpinejs": "^3.13.11",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.1",
@@ -37,8 +37,7 @@
         "sharp": "^0.34.0",
         "tailwind-merge": "^3.1.0",
         "tailwind-variants": "^1.0.0",
-        "tailwindcss": "^4.1.2",
-        "typescript": "^5.8.2"
+        "tailwindcss": "^4.1.3"
     },
     "devDependencies": {
         "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
@@ -49,6 +48,6 @@
         "postcss-import": "^16.1.0",
         "prettier": "^3.5.3",
         "prettier-plugin-astro": "^0.14.1",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.3"
     }
 }
